# qween_Q-A_analytics_assistant

./: .gitignore  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml
api/: .gitignore  Dockerfile  download_hf_model.py  embeddings.py  env.sample  guardrails.py  langchain.ipynb  langgraph.json  langsmith_observability.py  pyproject.toml  rag_store.py  requirements-docker.txt  requirements.txt  semantic_cache.py  server.py  server_langgraph.py  service.py  service_langgraph.py  training_qween.ipynb
api/models/distilbert-base-uncased-ag-news/: config.json
api/scripts/: prefetch_models.py  run_studio.sh
api/useful/: 4.6_training_loop.ipynb  experiment.ipynb
scripts/: compose.sh
